[package]
name = "acts"
version = "0.1.0"
author = "Tor"
edition = "2021"


[dependencies]
derive_builder = "0.12.0"
dirs = "5.0.0"
iced = "0.8.0"
rusqlite = "0.28.0"
sentry = { version = "0.30.0", features = ["profiling"] }



[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
